--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="row team">
-        <div class="col-md-3">
+        <div class="col-md-3 col-md-offset-1">
           <div class="member">
             <img src="img/spencer.png" data-gif="img/spencer.gif" width="310" height="407" alt="Spencer Markowski" title="Spencer Markowski">
           </div>
@@ -73,12 +73,6 @@
             <img src="img/tomko.png" data-gif="img/tomko.gif" width="310" height="407" alt="Michael Tomko" title="Michael Tomko">
           </div>
           <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
-        </div>
-        <div class="col-md-3">
-          <div class="member">
-            <img src="img/jason.png" data-gif="img/jason.gif" width="310" height="407" alt="Jason Luebke" title="Jason Luebke">
-          </div>
-          <h4>Jason Luebke <small>UX / JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
       </div>
     </div>
