Updated URLs for FB/Tw images and contact form.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
-  <meta property="og:image" content="http://theablefew.github.io/theablefew.com/img/able-mark-facebook-og-image.png" />
+  <meta property="og:image" content="http://theablefew.com/img/able-mark-facebook-og-image.png" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@theablefew">
   <meta name="twitter:creator" content="@theablefew">
   <meta name="twitter:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting">
   <meta name="twitter:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.">
-  <meta name="twitter:image:src" content="http://theablefew.github.io/theablefew.com/img/able-mark-facebook-og-image.png">
+  <meta name="twitter:image:src" content="http://theablefew.com/img/able-mark-facebook-og-image.png">
   <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -198,7 +198,7 @@
           <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
         </div>
         <div class="col-md-6">
-          <form role="form" action="//forms.brace.io/tomko@theablefew.com" method="post">
+          <form role="form" action="//forms.brace.io/team@theablefew.com" method="post">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…">
@@ -219,7 +219,7 @@
               <label for="body">What's on your mind?</label>
               <textarea class="form-control" rows="3" name="body" id="body" placeholder="Do tell…"></textarea>
             </div>
-            <input type="hidden" name="_next" value="//theablefew.github.io/theablefew.com/?thanks=true" />
+            <input type="hidden" name="_next" value="//theablefew.com/?thanks=true" />
             <button type="submit" class="btn btn-default btn-block">Send</button>
           </form>
         </div>
