Including og:url.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
   <meta property="og:image" content="http://theablefew.com/img/able-mark-facebook-og-image.png" />
+  <meta property="og:url" content="http://theablefew.com" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@theablefew">
   <meta name="twitter:creator" content="@theablefew">
