Making email address less silly.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <p class="able_phone"><a href="tel:1-314-600-5473">(314) 600-5473</a></p>
           <h3>Indianapolis, IN</h3>
           <p class="able_phone"><a href="tel:1-317-572-7083">(317) 572-7083</a></p>
-          <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
+          <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info@theablefew.com</a></p>
         </div>
         <div class="col-md-6">
           <form role="form" action="//forms.brace.io/team@theablefew.com" method="post">
