Added twitter:domain for Twitter cards.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="twitter:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting">
   <meta name="twitter:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.">
   <meta name="twitter:image:src" content="http://theablefew.com/img/able-mark-facebook-og-image.png">
+  <meta name="twitter:domain" content="http://theablefew.com">
   <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
