--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info@theablefew.com</a></p>
         </div>
         <div class="col-md-6">
-          <form role="form" action="//forms.brace.io/team@theablefew.com" method="post">
+          <form role="form" action="//formspree.io/team@theablefew.com" method="post">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…">
@@ -239,7 +239,9 @@
               <label for="body">What's on your mind?</label>
               <textarea class="form-control" rows="3" name="body" id="body" placeholder="Do tell…"></textarea>
             </div>
+            <input type="hidden" name="_subject" value="New TAF website inquiry!" />
             <input type="hidden" name="_next" value="//theablefew.com/?thanks=true" />
+            <input type="text" name="_gotcha" style="display:none" />
             <button type="submit" class="btn btn-default btn-block">Send</button>
           </form>
         </div>
