--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container" id="about">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>JavaScript</strong>, <strong>Logstash</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
 
@@ -107,16 +107,23 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <h2>Technology Consulting</h2>
-          <p>For the bulk of our customers we serve as their entire technology team on an on-going basis. We help design their products, architect complex solutions to their problems, and advocate on their behalf with other partners and vendors.</p>
-        </div>
-        <div class="col-md-4">
-          <h2>Custom Software</h2>
-          <p>Whether you would like us to start a brand new project with you, or support your existing application, we consistently deliver products that push the boundaries of what is possible.</p>
-        </div>
-        <div class="col-md-4">
-          <h2>Elasticsearch Support</h2>
+          <h2>Capacity Planning</h2>
           <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
+        </div>
+        <div class="col-md-4">
+          <h2>Cluster Deployment</h2>
+          <p>We assist you in deploying a new Elasticsearch cluster, either on our platform, Stretchy, or in your existing environment, which allows your team to focus on building your product.</p>
+        </div>
+        <div class="col-md-4">
+          <h2>Cluster Analysis</h2>
+          <p>We analyze your cluster to identify bottlenecks and problem areas, and make recommendations on how to remedy them based on your usage requirements. We can even help you implement those recommendations, too!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="background: #ff393a url(img/stretchy-background.png) no-repeat bottom center fixed; padding: 20px 0; margin-top:20px;">
+          <img src="img/stretchy.io.png" style="float:left; margin: 10px 10px 0 0; width:300px; height:auto;">
+          <h2 style="color:#ffffff;">Stretchy.io</h2>
+          <p style="color:#ffffff;">Simply-priced, pre-configured, fine-tuned, no-nonsense Elasticsearch hosting bundled with on-going, world-class maintenance and support, for all of your development, staging, and production neeeds.</p>
         </div>
       </div>
     </div>
