Removed weird github project bar and fixed meta content.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>The Able Few | Elasticsearch and Ruby on Rails Consulting</title>
-  <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and is based in St. Louis, MO and Indianapolis, IN.">
+  <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, JavaScript, Logstash, and Elasticsearch and is based in St. Louis, MO and Indianapolis, IN.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='x-dns-prefetch-control' content='on'>
   <link rel="dns-prefetch" href="//ajax.googleapis.com">
 
   <meta property="og:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting" />
   <meta property="og:site_name" content="The Able Few"/>
-  <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
+  <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, JavaScript, Logstash, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
   <meta property="og:image" content="http://theablefew.com/img/able-mark-facebook-og-image.png" />
@@ -23,7 +23,7 @@
   <meta name="twitter:site" content="@theablefew">
   <meta name="twitter:creator" content="@theablefew">
   <meta name="twitter:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting">
-  <meta name="twitter:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.">
+  <meta name="twitter:description" content="The Able Few provides technology consulting in Ruby on Rails, JavaScript, Logstash, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.">
   <meta name="twitter:image:src" content="http://theablefew.com/img/able-mark-facebook-og-image.png">
   <meta name="twitter:domain" content="http://theablefew.com">
   <link type="text/plain" rel="author" href="/humans.txt" />
@@ -144,68 +144,6 @@
         </div>
       </div>
       <br />
-    </div>
-
-    <hr>
-
-    <div class="container padded" id="open_source">
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can. <a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-        </div>
-      </div>
-      <div class="row projects">
-        <div class="col-md-2 hidden-xs hidden-sm">
-          <div class="member">
-            <img src="img/projects1bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-        <div class="col-md-2 hidden-xs hidden-sm">
-          <div class="member">
-            <img src="img/projects2bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-        <div class="col-md-2">
-          <div class="member">
-            <img src="img/projects3bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-        <div class="col-md-2 hidden-xs hidden-sm">
-          <div class="member">
-            <img src="img/projects4bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-        <div class="col-md-2 hidden-xs hidden-sm">
-          <div class="member">
-            <img src="img/projects5bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-        <div class="col-md-2 hidden-xs hidden-sm">
-          <div class="member">
-            <img src="img/projects6bw2.jpg" width="600" height="600">
-          </div>
-          <br />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
-          <p>Dead-simple chart rendering API for D3.js with self-discovering DOM elements.</p>
-        </div>
-        <div class="col-md-4">
-          <h2><a href="https://github.com/theablefew/goodyear" target="_blank">Goodyear</a></h2>
-          <p>An ActiveRecord-like query interface for Elasticsearch.</p>
-        </div>
-        <div class="col-md-4">
-          <h2><a href="https://github.com/theablefew/gnip-rules" target="_blank">Gnip Rules</a></h2>
-          <p>A quick and easy way to manage your rules via Gnip Rules API.</p>
-        </div>
-      </div>
     </div>
 
     <hr>
