Styling for stretchy at breakpoints.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -120,10 +120,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12" style="background: #ff393a url(img/stretchy-background.png) no-repeat bottom center fixed; padding: 20px 0; margin-top:20px;">
-          <img src="img/stretchy.io.png" style="float:left; margin: 10px 10px 0 0; width:300px; height:auto;">
-          <h2 style="color:#ffffff;">Stretchy.io</h2>
-          <p style="color:#ffffff;">Simply-priced, pre-configured, fine-tuned, no-nonsense Elasticsearch hosting bundled with on-going, world-class maintenance and support, for all of your development, staging, and production neeeds.</p>
+        <div class="col-md-12" id="stretchy">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="img/stretchy.io.png" class="stretchy-logo">
+            </div>
+            <div class="col-sm-8">
+              <h2>Stretchy.io</h2>
+              <p>Simply-priced, pre-configured, fine-tuned, no-nonsense Elasticsearch hosting bundled with on-going, world-class maintenance and support, for all of your development, staging, and production neeeds.</p>
+            </div>
         </div>
       </div>
     </div>
@@ -197,7 +202,7 @@
 
     <div class="container">
       <footer>
-        <p>&copy; The Able Few 2014&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
+        <p>&copy;2016 The Able Few, LLC&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
       </footer>
     </div> <!-- /container -->
   </div>
