--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <input type="hidden" name="_subject" value="New TAF website inquiry!" />
             <input type="hidden" name="_next" value="//theablefew.com/?thanks=true" />
             <input type="text" name="_gotcha" style="display:none" />
-            <button type="submit" class="btn btn-default btn-block">Send</button>
+            <input type="submit" class="btn btn-default btn-block" value="Send" />
           </form>
         </div>
       </div>
