--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="row team">
-        <div class="col-md-3 col-md-offset-1">
+        <div class="col-md-3 col-md-offset-3">
           <div class="member">
             <img src="img/spencer.png" data-gif="img/spencerslw.gif" width="310" height="407" alt="Spencer Markowski" title="Spencer Markowski">
           </div>
@@ -88,12 +88,7 @@
           </div>
           <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
-        <div class="col-md-3">
-          <div class="member">
-            <img src="img/tomko.png" data-gif="img/tomkoslw.gif" width="310" height="407" alt="Michael Tomko" title="Michael Tomko">
-          </div>
-          <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
-        </div>
+
       </div>
     </div>
 
@@ -112,7 +107,7 @@
         </div>
         <div class="col-md-4">
           <h2>Cluster Deployment</h2>
-          <p>We assist you in deploying a new Elasticsearch cluster, either on our platform, Stretchy, or in your existing environment, which allows your team to focus on building your product.</p>
+          <p>We assist you in deploying a new Elasticsearch cluster on our platform, Stretchy which allows your team to focus on building your product.</p>
         </div>
         <div class="col-md-4">
           <h2>Cluster Analysis</h2>
