--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>The Able Few | Elasticsearch and Ruby on Rails Consulting</title>
-  <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, JavaScript, Logstash, and Elasticsearch and is based in St. Louis, MO and Indianapolis, IN.">
+  <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, JavaScript, Logstash, and Elasticsearch, Project Rescue and Ruby on Rails Upgrades and is based in St. Louis, MO and Indianapolis, IN.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='x-dns-prefetch-control' content='on'>
   <link rel="dns-prefetch" href="//ajax.googleapis.com">
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="jumbo-content">
         <h1 id="logo">the able few</h1>
-        <h2 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h2>
+        <h3 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h3>
         <p class="visible-xs header_phone">STL: <a href="tel:1-314-600-5473">(314) 600-5473</a> | IND: <a href="tel:1-317-572-7083">(317) 572-7083</a></p>
       </div>
     </div>
@@ -97,32 +97,85 @@
     <div class="container padded" id="open_source">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">We are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
       <div class="row">
+        <h2>Startup Accelerator</h2>
+        <div class="col-md-6">
+          <h3>Staff and Build</h3>
+          <p>
+            We can help you staff and build your product. We have a network of developers, designers, and product managers that can help you get your product off the ground.
+          </p>
+          <p>
+            The Able Few is a <strong>full-stack shop.</strong> We can help you build your product from the ground up, or help you scale your existing product. 
+            From the front-end to back-end, infrastructure to DevOps, to data ingestion and performance scaling, we've got you covered.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h3>Product Strategy</h3>
+          <p>
+            We're here to help define your product strategy and roadmap. We can help you identify your target market, define your product, and build a roadmap to get you to market.
+          </p>
+          <p>
+            Understanding the big picture is our specialty. We can help you identify the right technologies, the right people, and the right processes to actualize your ideas.
+          </p>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="row">
+        <h2>Project Rescue</h2>
+        <div class="col-md-6">
+          <h3>Ruby on Rails Upgrades</h3>
+          <p>Is your application currently on Rails 5.x and you're considering the leap to Rails 8? No tests? Multiple apps? We're here to help!</p>
+          <p>We've been with Rails since the beginning. Our team is ready to guide you through the labyrinth of upgrading, ensuring no stone is left unturned. 
+            We'll create a comprehensive plan tailored to your application, ensuring a smooth transition to the latest Rails version. Let's future-proof your app together!
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h3>Process Overhauls</h3>
+          <p>
+            Operational success is more than just software. It's about people, process, and technology. We can help you identify and address the
+            complex interdependencies between code bases, infrastructure, and organizational process often found in the nebulous spaces somewhere between software, process and people.
+          </p>
+          <p>
+            It's a phenomon we like to call <strong>Strange Spaghetti</strong> and we're here to help you untangle it.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+      <div class="clearfix"></div>
+        <h2>Elasticsearch</h2>
         <div class="col-md-4">
-          <h2>Capacity Planning</h2>
+          <h3>Capacity Planning</h3>
           <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
         </div>
         <div class="col-md-4">
-          <h2>Cluster Deployment</h2>
+          <h3>Cluster Deployment</h3>
           <p>We assist you in deploying a new Elasticsearch cluster on our platform, Stretchy which allows your team to focus on building your product.</p>
         </div>
         <div class="col-md-4">
-          <h2>Cluster Analysis</h2>
+          <h3>Cluster Analysis</h3>
           <p>We analyze your cluster to identify bottlenecks and problem areas, and make recommendations on how to remedy them based on your usage requirements. We can even help you implement those recommendations, too!</p>
         </div>
       </div>
+
+
+      </div>
+    <hr>
       <div class="row">
         <div class="col-md-12" id="stretchy">
           <div class="row">
             <div class="col-sm-4">
-              <img src="img/stretchy.io.png" class="stretchy-logo">
+              <img src="img/stretchy.png" class="stretchy-logo">
             </div>
             <div class="col-sm-8">
-              <h2>Stretchy.io</h2>
-              <p>Simply-priced, pre-configured, fine-tuned, no-nonsense Elasticsearch hosting bundled with on-going, world-class maintenance and support, for all of your development, staging, and production neeeds.</p>
+              <h3><a href="https://theablefew.github.io/stretchy/#/">stretchy-model</a></h3>
+              <p>Supercharge your Rails apps with Elasticsearch and Opensearch models for Ruby on Rails</p>
+              <div class="" id="badges">
+                <a href="https://github.com/theablefew/stretchy/releases"><img src="https://img.shields.io/github/v/release/theablefew/stretchy?sort=semver&amp;color=blue" style="max-width: 100%;"></a>
+                <a href="https://github.com/theablefew/stretchy/actions"><img src="https://github.com/theablefew/stretchy/actions/workflows/spec.yml/badge.svg" style="max-width: 100%;"></a>
+              </div>
             </div>
         </div>
       </div>
@@ -197,7 +250,7 @@
 
     <div class="container">
       <footer>
-        <p>&copy;2016 The Able Few, LLC&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
+        <p>&copy;2024 The Able Few, LLC&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
       </footer>
     </div> <!-- /container -->
   </div>
