--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
       <div class="row">
         <div class="col-md-12" id="stretchy">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-sm-offset-1">
               <img src="img/stretchy.png" class="stretchy-logo">
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-7">
               <h3><a href="https://theablefew.github.io/stretchy/#/">stretchy-model</a></h3>
               <p>Supercharge your Rails apps with Elasticsearch and Opensearch models for Ruby on Rails</p>
               <div class="" id="badges">
