--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
           <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info@theablefew.com</a></p>
         </div>
         <div class="col-md-6">
-          <form role="form" action="//formspree.io/f/mleqweqd" method="POST">
+          <form
+            action="https://formspree.io/f/mleqweqd"
+            method="POST">
+
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…">
@@ -240,7 +243,7 @@
             <input type="hidden" name="_subject" value="New TAF website inquiry!" />
             <input type="hidden" name="_next" value="//theablefew.com/?thanks=true" />
             <input type="text" name="_gotcha" style="display:none" />
-            <input type="submit" class="btn btn-default btn-block" value="Send" />
+            <button type="submit" class="btn btn-default btn-block">Send</button>
           </form>
         </div>
       </div>
