--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
             <div class="form-group">
               <label for="name">Name</label>
-              <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…">
+              <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…" required >
             </div>
             <div class="form-group">
               <label for="email">Company</label>
@@ -231,7 +231,7 @@
             </div>
             <div class="form-group">
               <label for="_replyto">Email Address</label>
-              <input type="email" class="form-control" name="_replyto" id="_replyto" placeholder="Email, please…">
+              <input type="email" class="form-control" name="_replyto" id="_replyto" placeholder="Email, please…" required>
             </div>
             <div class="form-group">
               <label for="phone">Phone Number</label>
@@ -239,7 +239,7 @@
             </div>
             <div class="form-group">
               <label for="body">What's on your mind?</label>
-              <textarea class="form-control" rows="3" name="body" id="body" placeholder="Do tell…"></textarea>
+              <textarea class="form-control" rows="3" name="body" id="body" placeholder="Do tell…" required></textarea>
             </div>
             <input type="hidden" name="_subject" value="New TAF website inquiry!" />
             <input type="hidden" name="_next" value="//theablefew.com/?thanks=true" />
